<resources>
    <string name="app_name">BoardBattle 2.0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">грати</string>
    <string name="settings">налаштування</string>
    <string name="exit">вийти</string>
    <string name="game_points">Територія: %1$d (%2$d \%%)</string>
    <string name="left_btn_text">◀</string>
    <string name="right_btn_text">▶</string>
    <string name="up_btn_text">▲</string>
    <string name="down_btn_text">▼</string>
    <string name="turn_btn_text">↻</string>
    <string name="tick">✓</string>
    <string name="cross">✖</string>
    <string name="win_message">Перемога гравця %1$d</string>
    <string name="to_menu">в меню!</string>
    <string name="end_game_question">Закінчити гру?</string>
    <string name="continue_game_question">Бажаєте продовжити незакінчену гру?</string>
    <string name="accept">Так</string>
    <string name="deny">Ні</string>
</resources>