<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_1"
    tools:context=".menu.MenuFragment">

    <com.example.boardbattle2_0.views.AppButton
        android:id="@+id/playBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/first_page_buttons_background"
        android:text="@string/play"
        android:textColor="@color/dark_add_color"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/settingsBtn"
        app:layout_constraintEnd_toEndOf="@+id/settingsBtn"
        app:layout_constraintStart_toStartOf="@+id/settingsBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.boardbattle2_0.views.AppButton
        android:id="@+id/settingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/first_page_buttons_background"
        android:text="@string/settings"
        android:textColor="@color/dark_add_color"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/exitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playBtn" />

    <com.example.boardbattle2_0.views.AppButton
        android:id="@+id/exitBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/first_page_buttons_background"
        android:text="@string/exit"
        android:textColor="@color/dark_add_color"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/settingsBtn"
        app:layout_constraintStart_toStartOf="@+id/settingsBtn"
        app:layout_constraintTop_toBottomOf="@+id/settingsBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
